  
* The presence of a sidecar file is indicated by a '*' following the image name.

* Add a preference item that controls coordinate display formats.   Latitude
  and longitude can be displayed in one of three forms:
  - dd.ddddd
  - dd° mm.mmmm' N (or S, E, W depending upon coordinate)
  - dd° mm' ss.ss" N (or S, E, W depending upon coordinate)

* Reading image metadata has been moved from the main queue. As a result opening
  a large number of images should be slightly faster.

* Preferences window changed.  Textual explanations of buttons have been
  moved to tool tips.

### Bug fixes

* Updated image locations could sometimes be written with the wrong longitude
  reference.

* fix crash that occured in the app was launched by dragging images onto
  the app icon.

## GeoTag 4.5

### New Features

* center the map (more or less) on a track when the track is opened.
* Add preference to select track color for GPX tracks.
* change GPX file loaded notification to a sheet attached to the GeoTag main
  window.  Dual monitor users would sometimes find the pop-up previously used
  on the wrong monitor, i.e. no the monitor they were looking at.
* Verify a file can be written by exiftool. If not do not allow attempted
  updates that will fail during a save.   HEIC (iPhone) files are not writable.
* exiftool 11.32
* swift 5

### Bug Fixes

* fix error that caused a "could not save images" alert even when all image
  data had been saved.
* fix race condition when checking that all images had been saved
* handle GPX logs that include milliseconds in the location timestamp.
* Fix location interpolition issues related to time zones.
* Fix backup file naming. Examples:
  foo.bar.jpg would be backed up as foo.bar.jpg the first time.
  foo.bar.jpg would be backed up as foo-1.bar.jpg the second time.
  The backup file name should have been foo.bar-1.jpg

## GeoTag 4.4

### New Features

* GeoTag can now read GPS track logs in the format of a GPX file and display