@@ -15,8 +15,7 @@ ExifTool. **ExifTool is built in to GeoTag.**
 GeoTag is available as a [homebrew](http://brew.sh) cask.  Homebrew users
 can use the command `brew cask install geotag` to install.
 
-Version 4.4.x is the latest version.  It workes on macOS 10.12 or later. Version
-4 uses Apple maps.
+Version 4.5 is the latest released version.  It workes on macOS 10.12 or later.
 
 ## Work in progress
 
@@ -34,6 +33,11 @@ Version 4.4.x is the latest version.  It workes on macOS 10.12 or later. Version
   - dd.ddddd
   - dd° mm.mmmm' N (or S, E, W depending upon coordinate)
   - dd° mm' ss.ss" N (or S, E, W depending upon coordinate)
+
+* Location coordinates can be entered by double clicking on either the
+  latitude or longitude of an entry.  Coordinates can be entered in
+  degrees, degrees and minutes, or degrees, minutes, and seconds. Use of
+  °, ', and " indicators are optional.
 
 * Reading image metadata has been moved from the main queue. As a result opening
   a large number of images should be slightly faster.
